trunk/appointment/src/objects/Sample__c.object
<CustomObject>
    <description>Visualforce &amp; Apex Code Samples</description>
    <fields>
        <fullName>Author__c</fullName>
        <description>Author of the code or sample</description>
        <label>Author</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Link__c</fullName>
        <description>Hyperlink to test various samples.</description>
        <formula>HYPERLINK( Page_Name__c &amp;  IF(TRIM(Query_String__c)  = &quot;&quot;, &quot;&quot;, &quot;?&quot;)  &amp; Query_String__c, &quot;Run Sample&quot;)</formula>
        <label>Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <defaultValue>&quot;/apex/&quot;</defaultValue>
        <label>Page Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_String__c</fullName>
        <defaultValue>&quot;core.apexpages.devmode.url=1&quot;</defaultValue>
        <description>Add &apos;core.apexpages.devmode.url=1&apos; to NOT run in development mode.</description>
        <inlineHelpText>Add &apos;core.apexpages.devmode.url=1&apos; to NOT run in development mode.</inlineHelpText>
        <label>Query String</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller with Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pages Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sample</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>